// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lerna run test --parallel: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info run in 4 package(s): npm run test --silent
lerna success run Ran npm script 'test' in packages:
lerna success - package-1
lerna success - package-2
lerna success - package-3
lerna success - package-4
`;

exports[`lerna run test --stream: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna success run Ran npm script 'test' in packages:
lerna success - package-1
lerna success - package-2
lerna success - package-3
lerna success - package-4
`;

exports[`lerna run test --stream: stdout 1`] = `
package-3: package-3
package-4: package-4
package-1: package-1
package-2: package-2
`;
